--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -48,7 +48,8 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func, extract\n",
+    "from flask import Flask, jsonify"
    ]
   },
   {
@@ -123,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23725cf7dc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20ad0862948>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,71 +193,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2021.000000</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.177279</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.461190</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>1.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.020000</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.130000</td>\n",
+       "      <th>2017-08-22</th>\n",
+       "      <td>2017-08-22</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6.700000</td>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2230 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       precipitation\n",
-       "count    2021.000000\n",
-       "mean        0.177279\n",
-       "std         0.461190\n",
-       "min         0.000000\n",
-       "25%         0.000000\n",
-       "50%         0.020000\n",
-       "75%         0.130000\n",
-       "max         6.700000"
+       "                  date  precipitation\n",
+       "date                                 \n",
+       "2016-08-23  2016-08-23           0.00\n",
+       "2016-08-23  2016-08-23            NaN\n",
+       "2016-08-23  2016-08-23           1.79\n",
+       "2016-08-23  2016-08-23           0.05\n",
+       "2016-08-23  2016-08-23           0.15\n",
+       "...                ...            ...\n",
+       "2017-08-22  2017-08-22           0.00\n",
+       "2017-08-23  2017-08-23           0.00\n",
+       "2017-08-23  2017-08-23           0.00\n",
+       "2017-08-23  2017-08-23           0.08\n",
+       "2017-08-23  2017-08-23           0.45\n",
+       "\n",
+       "[2230 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
-    "df.describe()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +302,7 @@
        "[(9)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +331,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +354,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start=None, end=None):\n",
+    "     # Select statement\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "    if not end:\n",
+    "        # calculate TMIN, TAVG, TMAX for dates greater than start\n",
+    "            results = session.query(*sel).\\\n",
+    "            filter(Measurement.date >= start).all()\n",
+    "        # Unravel results into a 1D array and convert to a list\n",
+    "            temps = list(np.ravel(results))\n",
+    "            return jsonify(temps)\n",
+    "    \n",
+    "    # calculate TMIN, TAVG, TMAX with start and stop\n",
+    "    results = session.query(*sel).\\\n",
+    "    filter(Measurement.date >= start).\\\n",
+    "    filter(Measurement.date <= end).all()\n",
+    "    # Unravel results into a 1D array and convert to a list\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return jsonify(temps)"
    ]
   },
   {
@@ -374,6 +429,231 @@
    "source": [
     "# Challenge"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for summary stats for a given month - enter the month number\n",
+    "def summary_stats(month):\n",
+    "    results = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "filter(extract('month', Measurement.date) == month).all()\n",
+    "    results_df = pd.DataFrame(results, columns=['date','tobs'])\n",
+    "    return results_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1700.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>74.944118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.257417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>64.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>75.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tobs\n",
+       "count  1700.000000\n",
+       "mean     74.944118\n",
+       "std       3.257417\n",
+       "min      64.000000\n",
+       "25%      73.000000\n",
+       "50%      75.000000\n",
+       "75%      77.000000\n",
+       "max      85.000000"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# June summary temperature stats\n",
+    "summary_stats(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1517.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>71.041529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.745920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>71.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tobs\n",
+       "count  1517.000000\n",
+       "mean     71.041529\n",
+       "std       3.745920\n",
+       "min      56.000000\n",
+       "25%      69.000000\n",
+       "50%      71.000000\n",
+       "75%      74.000000\n",
+       "max      83.000000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# December summary temperature stats\n",
+    "summary_stats(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
